# EgoStarSea_Agents

./: .env.example  CHAT_API_README.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  test_chat_api.py  test_ego_personality.py  test_image_input.py  test_multimodal_api.py  usage_examples.py
a2a_mcp_tutorial_main/: README.md  __init__.py  pyproject.toml
a2a_mcp_tutorial_main/a2a_servers/agent_servers/: gsearch_report_agent_server.py  host_agent_server.py  stock_report_agent_server.py
a2a_mcp_tutorial_main/a2a_servers/agents/: adk_agent.py
a2a_mcp_tutorial_main/a2a_servers/agents/utils/: remote_agent_connection.py
a2a_mcp_tutorial_main/a2a_servers/common/: agent_task_manager.py
a2a_mcp_tutorial_main/a2a_servers/common/client/: card_resolver.py  client.py
a2a_mcp_tutorial_main/a2a_servers/hosts/cli/: push_notification_listener.py
a2a_mcp_tutorial_main/adk_agents_testing/: hierarchical_agents.py  single_agent_search_mcp.py
a2a_mcp_tutorial_main/adk_agents_testing/mcp_tools/: mcp_tool_search.py  mcp_tool_stocks.py
a2a_mcp_tutorial_main/mcp_server/sse/: search_server.py  stocks_server.py
a2a_mcp_tutorial_main/mcp_server/stdio/: search_server.py  stocks_server.py
a2a_mcp_tutorial_main/services/search_engine_service/: serper_dev_service.py
a2a_mcp_tutorial_main/services/stocks_service/: finhub_service.py
docs/: ego_usage_guide.md  multimodal_chat_api.md
example/: main.py  main_server.py
example/sub_mcp_server/: web_search_mcp_server.py
prompts/: ego_system_prompt.md
services/: agent_client_proxy.py  agent_launcher.py
(+6 files in other folders)
